fullSandbox11072023/force-app/main/default/objects/Contract_Material__c/Contract_Material__c.object-meta.xml
<CustomObject>
    <label>Contract Material</label>
    <nameField>
        <label>Contract Material Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Material</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>