fullSandbox11072023/force-app/main/default/objects/Contract_Material__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>if((Valid_To__c &gt;= TODAY() &amp;&amp; Valid_From__c &lt;= TODAY()), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>