fullSandbox11072023/force-app/main/default/objects/Contract_Material__c/fields/Active_Future__c.field-meta.xml
<CustomField>
    <fullName>Active_Future__c</fullName>
    <formula>if(Valid_To__c  &gt;=  TODAY(), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active + Future</label>
    <type>Checkbox</type>
</CustomField>