fullSandbox11072023/force-app/main/default/objects/Contract_Material__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <label>Agreement</label>
    <referenceTo>Contract_Header__c</referenceTo>
    <relationshipLabel>Contract Material</relationshipLabel>
    <relationshipName>Contract_Materials</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>