fullSandbox11072023/force-app/main/default/objects/Contract_Material__c/fields/Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Number__c</fullName>
    <formula>Agreement__r.Agreement_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Number</label>
    <type>Text</type>
</CustomField>