fullSandbox11072023/force-app/main/default/objects/Contract_Material__c/fields/Agreement_Number_Text__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Number_Text__c</fullName>
    <externalId>true</externalId>
    <label>Agreement Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>