fullSandbox11072023/force-app/main/default/objects/Contract_Material__c/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <label>Distribution Channel</label>
    <length>2</length>
    <type>Text</type>
</CustomField>