fullSandbox11072023/force-app/main/default/objects/Contract_Material__c/fields/Division_Check__c.field-meta.xml
<CustomField>
    <fullName>Division_Check__c</fullName>
    <formula>CONTAINS(Agreement__r.Divisions__c, Product__r.Division__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Division Check</label>
    <type>Checkbox</type>
</CustomField>