fullSandbox11072023/force-app/main/default/objects/Contract_Material__c/fields/Level_Fix__c.field-meta.xml
<CustomField>
    <fullName>Level_Fix__c</fullName>
    <label>Level Fix</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>