fullSandbox11072023/force-app/main/default/objects/Contract_Material__c/fields/Material_Division2__c.field-meta.xml
<CustomField>
    <fullName>Material_Division2__c</fullName>
    <formula>Product__r.Division__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Division2</label>
    <type>Text</type>
</CustomField>