fullSandbox11072023/force-app/main/default/objects/Contract_Material__c/fields/Material_Division__c.field-meta.xml
<CustomField>
    <fullName>Material_Division__c</fullName>
    <label>Material Division</label>
    <length>2</length>
    <type>Text</type>
</CustomField>