fullSandbox11072023/force-app/main/default/objects/Contract_Material__c/fields/Material_Lookup_Key__c.field-meta.xml
<CustomField>
    <fullName>Material_Lookup_Key__c</fullName>
    <externalId>true</externalId>
    <label>Material Lookup Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>