fullSandbox11072023/force-app/main/default/objects/Contract_Material__c/fields/Pricing_Tier__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tier__c</fullName>
    <formula>Agreement__r.Pricing_Tier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Tier</label>
    <type>Checkbox</type>
</CustomField>