fullSandbox11072023/force-app/main/default/objects/Contract_Material__c/fields/Pricing_Tier_Access_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tier_Access_Mismatch__c</fullName>
    <formula>AND(
Agreement__r.Pricing_Tier_Access__c &lt;&gt; Level__c,
Agreement__r.Pricing_Tier_Access__c &lt; Level__c,
Pricing_Tier__c = TRUE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Tier Access Mismatch</label>
    <type>Checkbox</type>
</CustomField>