fullSandbox11072023/force-app/main/default/objects/Contract_Material__c/fields/Process_Tier_Level_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Process_Tier_Level_Mismatch__c</fullName>
    <formula>AND(
Pricing_Tier__c = TRUE,

OR(
AND(
RIGHT(Agreement__r.GPO_Contract_Ref__c,2) = &quot;-R&quot;,
Level__c &lt;&gt; 1
),
AND(
RIGHT(Agreement__r.GPO_Contract_Ref__c,2) = &quot;-M&quot;,
Level__c &lt;&gt; 2
),
AND(
RIGHT(Agreement__r.GPO_Contract_Ref__c,2) = &quot;-D&quot;,
Level__c &lt;&gt; 3
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process Tier Level Mismatch</label>
    <type>Checkbox</type>
</CustomField>