fullSandbox11072023/force-app/main/default/objects/Contract_Material__c/fields/Tier_Level_Name__c.field-meta.xml
<CustomField>
    <fullName>Tier_Level_Name__c</fullName>
    <description>CASE(Level__c, 
1, &quot;REP&quot;, 
2, &quot;RSM&quot;,
3, &quot;DIR&quot;,
4, &quot;VP&quot;,
&quot;Out of Range&quot;
)</description>
    <formula>IF( AND(Level__c = 1,CONTAINS(Agreement__r.GPO_Contract_Ref__c, &quot;-N&quot;),Sales_Org__c = &quot;CA10&quot; ),&quot;National Tier&quot;,
IF(
Level__c = 1, &quot;REP&quot;,
IF(
Level__c = 2, &quot;RSM&quot;,
IF(
Level__c = 3, &quot;DIR&quot;,
IF(
Level__c = 4, &quot;VP&quot;,&quot;Out of Range&quot;
)
)
)
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier Level Name</label>
    <type>Text</type>
</CustomField>