fullSandbox11072023/force-app/main/default/objects/Contract_Material__c/fields/VP_Price__c.field-meta.xml
<CustomField>
    <fullName>VP_Price__c</fullName>
    <label>VP Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>